Crash on attempting to rename linked object from the NLA #118225

Closed
opened 2024-02-14 00:43:31 +01:00 by Albert-OShea · 1 comment

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 522.30

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-13 15:45, hash: 8b46fdeab858
Also broken in 4.0.2

Short description of error
Attempting to edit the name field of an overridden linked object can crash blender. This only happens when attempting it on an overridden object that has more complexity than usual - sorry that I'm not able to provide more details than this, I tried to recreate this bug using the simplest possible setup using fresh objects, and couldn't.

Exact steps for others to reproduce the error

  • Download both attached blend files and open nla_crash_override.blend.
  • In the NLA panel that is opened, double click the blue name label 'Valve_Wheel_Horizontal.046' (the object name on top, not the strip channel below it)
  • Blender crashes
**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 522.30 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-13 15:45, hash: `8b46fdeab858` Also broken in 4.0.2 **Short description of error** Attempting to edit the name field of an overridden linked object can crash blender. This only happens when attempting it on an overridden object that has more complexity than usual - sorry that I'm not able to provide more details than this, I tried to recreate this bug using the simplest possible setup using fresh objects, and couldn't. **Exact steps for others to reproduce the error** - Download both attached blend files and open nla_crash_override.blend. - In the NLA panel that is opened, double click the blue name label 'Valve_Wheel_Horizontal.046' (the object name on top, not the strip channel below it) - Blender crashes
Albert-OShea added the
Status
Needs Triage
Severity
Normal
Type
Report
labels 2024-02-14 00:43:32 +01:00
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
Interest
Overrides
and removed
Status
Needs Triage
labels 2024-02-14 09:48:04 +01:00
Philipp Oeser self-assigned this 2024-02-14 11:07:21 +01:00
Philipp Oeser added the
Module
Animation & Rigging
label 2024-02-14 11:07:38 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-16 12:29:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118225
No description provided.